--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <dif id="tagline">Tu blog de confianza</dif>
             </div>
             <div id="post">
                 <h1>Esta es el titulo atractivo e interesante del post</h1>
