--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,9 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas
                     increibles que se pueden hacer con git
                 </p>
+                <p>
+                    Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rocktar. Pero estadísticamente no lo eres... por ahora.
+                </p>
             </div>
         </div>
     </body>
