Modifique la cabecera y el color del texto

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <dif id="tagline">Tu blog de confianza</dif>
+                <dif id="tagline">Tu blog de cabecera</dif>
             </div>
             <div id="post">
                 <h1>Esta es el titulo atractivo e interesante del post</h1>
