--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <dif id="tagline">Tu blog de confianza</dif>
+                <dif id="tagline">Tu blog maestro</dif>
             </div>
             <div id="post">
                 <h1>Esta es el titulo atractivo e interesante del post</h1>
@@ -17,6 +17,7 @@
                 <p>
                     Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rocktar. Pero estadísticamente no lo eres... por ahora.
                 </p>
+                <p>Subscribete y dale like</p>
             </div>
         </div>
     </body>
