--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" >
                 Hyperblog
                 <dif id="tagline">Tu blog de cabecera</dif>
             </div>
