--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,8 @@
             </div>
             <div id="post">
                 <h1>Esta es el titulo atractivo e interesante del post</h1>
-                <p>Y este es el párrafo de inicio donde vamos a explicar las cosas
-                    increíbles que se pueden hacer con git
+                <p>Y este es el p&acute;rrafo de inicio donde vamos a explicar las cosas
+                    incre&iacute;bles que se pueden hacer con git
                 </p>
                 <p>
                     Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rocktar. Pero estadísticamente no lo eres... por ahora.
