Cambio al tagline y el color

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" >
                 Hyperblog
-                <dif id="tagline">Tu blog de cabecera</dif>
+                <dif id="tagline">Tu blog de confianza</dif>
             </div>
             <div id="post">
                 <h1>Esta es el titulo atractivo e interesante del post</h1>
